test/types/integral/init-on-int.good
init-on-int.chpl:1: error: initializers may currently only be defined on class, record, or union types
