test/types/integral/init-on-int.chpl
proc int.init(other: int) {
  this = 3;
}
